Changed tos background opacity Fixed more-link arrows wrapping on new lines

--- a/assets/scss/stg-design/atoms/_more-link.scss
+++ b/assets/scss/stg-design/atoms/_more-link.scss
@@ -7,7 +7,6 @@
 
   &:after {
     content: "\f30b";
-    display: inline-block;
     font-family: $font-awesome;
     font-size: 16px;
     margin-left: 5px;
